@@ -374,6 +374,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   version
 * (bug 12952) Using Nosuchusershort instead of Nosuchuser when account creation
   is disabled
+* (bug 12869) Magnify icon alignment should be adjusted using linked CSS
 
 == Parser changes in 1.12 ==
 
